# backend

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
src/: ai_generator.py  app.py
src/database/: db.py  schema.py
src/models/: emotion_model.py  user_model.py
src/router/: emotion_router.py  webhook.py
src/utils/: clerk_authentication.py
