[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>=3.0.5",
    "dotenv>=0.9.9",
    "fastapi>=0.116.0",
    "google-genai>=1.24.0",
    "pymongo>=4.13.2",
    "svix>=1.69.0",
    "uvicorn>=0.35.0",
]
